# py-resounding-libraries

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: release.yml
api_documentation/: index.html
credentials/: credentials.json
data/credentials/: credentials.json
data/mappings/: mapping_abbreviation_codes.json  mapping_reports.json
data/mappings/bibtex/: country_codes.csv  koha_entry_types.json
data/mappings/google/: google_books-koha_mapping.csv
data/mappings/koha/: authority_list.csv  biblio_list.csv
data/mappings/lod/: external_identifiers.json  koha-rdf_mapping-auth.csv  koha-rdf_mapping-biblio.csv  rdf_namespaces.json
data/mappings/omekas/: biblionumber_barcode.csv  koha-omekas_mapping - auth.csv  koha-omekas_mapping - biblio.csv  koha-omekas_mapping - locations.csv  koha-omekas_mapping - media.csv  koha-omekas_mapping - projects.csv  koha-omekas_mapping - research_groups.csv  koha-omekas_mapping - researchers.csv
data/mappings/wikidata/: .~lock.wikidata-koha-properties.csv#  authority_wd_list.csv  wd_authority_list.csv  wikidata-koha-properties.csv
docs/: api_documentation.md  index.md  installation.md  modules.md  reports.md
installation/: index.html
modules/: index.html
py-resounding-libraries/: __init__.py
pyreslib/: __init__.py  bibtex.py  google_books.py  koha.py  kraken.py  marc.py  omekas.py  rdf.py  transkribus.py  utilities.py  wikidata.py
pyreslib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
reports/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/api_documentation/: index.html
site/installation/: index.html
site/modules/: index.html
site/reports/: index.html
site/search/: search_index.json
