[project]
name = "py-reslib"
classifiers = ["Private :: Do Not Upload"] # remove if you wish to publish to PyPI
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "requests-oauth2client>=1.8.0",
    "sparqlwrapper>=2.0.0",
    "wikibaseintegrator>=0.12.15",
]
