[project]
name = "pyreslib"
authors = [{name = "Nicholas Cornia", email = "nicholas.cornia@orpheusinstituut.be"}]
license = "MIT" 
# classifiers = ["Private :: Do Not Upload"] # remove if you wish to publish to PyPI
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.2.0"
description = "Python package for digital libraries from the Resounding Libraries cluster at Orpheus Instituut"
keywords = ["koha", "wikidata", "digital-libraries", "transkribus","omekas","bibtex","marc","library-software"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=1.4.4",
    "omeka-s-tools>=0.3.0",
    "pandas>=2.3.3",
    "pymarc>=5.3.1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "requests-oauth2client>=1.8.0",
    "sparqlwrapper>=2.0.0",
    "urllib3>=2.6.3",
    "wikibaseintegrator>=0.12.15",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1",
]

[tool.setuptools]
packages = ["pyreslib"]

[tool.setuptools.package-data]
pyreslib = ["data/**/*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://nicholascorniaorpheus.github.io/py-resounding-libraries/"
Repository = "https://github.com/NicholasCorniaOrpheus/py-resounding-libraries"